--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-multi-select-component": "^3.0.1",
     "react-scripts": "3.4.1",
     "simple-excel-to-json": "^2.2.1",
     "xlsx": "^0.16.2",
